--- a/app/src/main/res/layout-small/activity_main.xml
+++ b/app/src/main/res/layout-small/activity_main.xml
@@ -115,7 +115,7 @@
         android:layout_width="100dp"
         android:layout_height="14dp"
         android:background="@drawable/sopfront"
-        android:drawableStart="15dp"
+        android:layout_marginStart="15dp"
         android:onClick="pdfgo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/button5"
